--- a/AWS-devops/buildspec.yml
+++ b/AWS-devops/buildspec.yml
@@ -2,17 +2,17 @@ version: 0.2
 
 phases:
 install:
-- echo installing NGINX
+- echo "installing NGINX"
 - sudo apt-get update
 - sudo apt-get install nginx -y
 
 build:
 commands:
-- echo build started on 'date'
+- echo "build started on"
 - cp index.html /var/www/html/
 post build:
 commands:
-- echo comfiguring nginx
+- echo "configuring nginx"
 
 
 artifacts:
